tests/NormalTests/paczka1/fuzzy1/60659739.err
Error in line 1: fPBZhC1emWN S440 67,3
Error in line 2: KWEB2G2dmDN S440 77,9
Error in line 7: S440 A277 23,0
Error in line 9: OTC S418 59,67
Error in line 5: KWEB2G2dmDN S222 13,0
Error in line 21: 3kTELqEZ3hs S418 61,2
Error in line 28: PidCDw S222 45,7
Error in line 31: S440 A277 36,3
Error in line 15: OTC S418 118,2
Error in line 23: 3kTELqEZ3hs S440 98,2
